# merlin

./: README.md  mkdocs.yml  pyproject.toml
docs/: index.md
docs/stylesheets/: extra.css
merlin/: Create.py  cli.py  config.py  create.py
merlin/defaults/: index.md  merlin.yml  template.j2
tests/: test_cli.py  test_create.py
